--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ cache: bundler
 rvm:
   - 2.5.1
 script:
-  -"bundle exec rspec spec"
+  - bundle exec rspec spec
 before_install: gem install bundler -v 2.0.2
